[UPDATE] Correcion de errores
