# Backend/src/routes/authenticate.routes.js
@@ -1,7 +1,7 @@
 const { Router } = require("express");
 const router = Router();
 
-const {loginUser} = require("../controllers/auth.controlador");
+const {loginUser} = require("../controllers/autentificacion.controlador");
 
 router.route("/login").post(loginUser);
 
